--- a/style.scss
+++ b/style.scss
@@ -40,8 +40,14 @@ h3{
 
 ol{
     background-color: lightblue;
+    padding-left: 50px;
 }
 
 section{
     align-items: center;
+}
+
+
+h3{
+    padding-left: 50px;
 }
